Add SwiftImage colorizable image type, use
* This adds a SwiftImage colorizable image type that we use in the
  remaining places where ColorOverlay was used. This allows one to color
  images with a simple color in a way that will work with Qt 6.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -125,6 +125,7 @@
     <file>BaseComponents/SwiftCategoryAxis.qml</file>
     <file>BaseComponents/SwiftTextbox.qml</file>
     <file>BaseComponents/SwiftTextInput.qml</file>
+    <file>BaseComponents/SwiftImage.qml</file>
     <file>ChartLegend.qml</file>
     <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
     <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
