Unify splash and entrypoint [CPP-769] (#584)
Jira: https://swift-nav.atlassian.net/browse/CPP-769

Test release here: https://github.com/swift-nav/swift-toolbox/releases/tag/v4.0.7-unify-splash

The splash screen launching as a separate process on macOS causes some strange interactions with the launcher bar in that basically you can't pin the app (it looks like this is because it loses track of what the main window of the app is).

Instead of doing this outside of Qt, do it inside Qt... this also vastly simplifies the implementation of the splash screen (which is probably what we should have done from the start, but ~this was my fault for encouraging the over-engineering here~ looks like this doesn't really work on Linux... since we already have the code for the hacky splash screen, we'll just use it on Linux).

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -115,6 +115,7 @@
     <file>images/swift-nav/Solution.svg</file>
     <file>images/swift-nav/Tracking.svg</file>
     <file>images/swift-nav/Update.svg</file>
+    <file>images/splash-version.jpg</file>
     <file>TableComponents/SortableColumnHeading.qml</file>
     <file>TableComponents/TableCellDelegate.qml</file>
     <file>TableComponents/SwiftTableView.qml</file>
