Get the SwiftNav QQC style to load in Qt 6
Some changes are necessary to get the SwiftNav Qt Quick Controls style to
properly load in Qt 6.

* New to Qt 6 is that the the style needs to have a `qmldir` file declared to
  make it a QML module.
* Since the style is now a module, we need to add a qml import path to the
  engine so that it can find the module.
* Care needs to be taken on style imports. Importing `QtQuick.Controls` will
  trigger the dynamic style loading mechanism that parses the
  `qtquickcontrols2.conf` file. If you just import one of the specific
  QtQuick.Controls styles (like QtQuick.Controls.Material), then the
  `qtquickcontrols2.conf` file is ignored and no dynamic style loading will
  occur. Material will be the style then. Any accent colors or themes specified
  in the config file will be ignored, and those will need to be manually
  specified in the qml using attached properties.
* For some reason, when Material is selected as the fallback style, the style
  customizations specified in qtquickcontrols2.conf are ignored.
  To get around this, I import QtQuick.Controls to get the dynamic style
  loading, and then right after import the QtQuick.Controls.Material style, then
  in the base item, I set the Material.accentColor attached property to the
  desired accent color. This seems like a bug, and I may report this.
* Import of the QtQuick.Controls.Material style was done in Constants.qml - this
  was unnecessary, as it was not used, and it also prevented the dynamic style
  loading to work properly, as the static style was imported first.

https://doc.qt.io/qt-6/qtquickcontrols2-customize.html#creating-a-custom-style
https://doc.qt.io/qt-6/qtqml-syntax-imports.html#qml-import-path
https://doc.qt.io/qt-6/qtqml-modules-qmldir.html
QML_IMPORT_TRACE https://doc.qt.io/qt-6/qtquick-debugging.html#debugging-module-imports

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -127,12 +127,13 @@
     <file>BaseComponents/SwiftTextInput.qml</file>
     <file>BaseComponents/SwiftImage.qml</file>
     <file>ChartLegend.qml</file>
-    <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
-    <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
-    <file alias="SwiftNav/RoundButton.qml">styles/SwiftNav/RoundButton.qml</file>
-    <file alias="SwiftNav/ComboBox.qml">styles/SwiftNav/ComboBox.qml</file>
-    <file alias="SwiftNav/Label.qml">styles/SwiftNav/Label.qml</file>
-    <file alias="SwiftNav/Button.qml">styles/SwiftNav/Button.qml</file>
+    <file>styles/SwiftNav/qmldir</file>
+    <file>styles/SwiftNav/TabBar.qml</file>
+    <file>styles/SwiftNav/TabButton.qml</file>
+    <file>styles/SwiftNav/RoundButton.qml</file>
+    <file>styles/SwiftNav/ComboBox.qml</file>
+    <file>styles/SwiftNav/Label.qml</file>
+    <file>styles/SwiftNav/Button.qml</file>
     <file>MainTab.qml</file>
     <file>TabInfoBar.qml</file>
     <file>PositionLoopAnimation.qml</file>
