move into scripts

--- a/resources/web/map/css/style.css
+++ b/resources/web/map/css/style.css
@@ -1,7 +1,11 @@
 body {
     margin: 0;
+    padding: 0;
 }
 
 #map {
-    height: 100vh;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
 }
