mapping integration [CPP-863] (#926)

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -54,6 +54,7 @@
     <file>SolutionTabComponents/SolutionPositionTab.qml</file>
     <file>SolutionTabComponents/SolutionTable.qml</file>
     <file>SolutionTabComponents/SolutionVelocityTab.qml</file>
+    <file>SolutionTabComponents/SolutionMapTab.qml</file>
     <file>TrackingTab.qml</file>
     <file>TrackingTabComponents/TrackingSignalsTab.qml</file>
     <file>TrackingTabComponents/TrackingSkyPlotTab.qml</file>
@@ -134,5 +135,8 @@
     <file>MainTab.qml</file>
     <file>TabInfoBar.qml</file>
     <file>PositionLoopAnimation.qml</file>
+    <file>web/map/index.html</file>
+    <file>web/map/js/trajectory.js</file>
+    <file>web/map/css/style.css</file>
 </qresource>
 </RCC>
